# PyThacpp

./: CMakeLists.txt  Main.cpp  README.md  appicon.rc
.github/workflows/: qodana_code_quality.yml
